--- a/web/scss/sections/template-editor-layout.scss
+++ b/web/scss/sections/template-editor-layout.scss
@@ -1045,25 +1045,25 @@ $short-phone-height: 570px;
     white-space: nowrap;
   }
 
-  input[type=radio], input[type=checkbox] + label {
+  input[type=radio] + label, input[type=checkbox] + label {
     display: block;
     padding-top: 5px;
-  }
 
-  input[type=radio], input[type=checkbox] + label:before {
-    content: '';
-    background: #fff;
-    border: .15em solid $madero-gray;
-    background-color: rgba(255, 255, 255, .8);
-    display: block;
-    box-sizing: border-box;
-    float: left;
-    width: 20px;
-    height: 20px;
-    vertical-align: top;
-    cursor: pointer;
-    text-align: center;
-    transition: all .1s ease-out;
+    &:before {
+      content: '';
+      background: #fff;
+      border: .15em solid $madero-gray;
+      background-color: rgba(255, 255, 255, .8);
+      display: block;
+      box-sizing: border-box;
+      float: left;
+      width: 20px;
+      height: 20px;
+      vertical-align: top;
+      cursor: pointer;
+      text-align: center;
+      transition: all .1s ease-out;      
+    }
   }
 
   input[type=radio] + label:before {
